# rustlob

./: .dockerignore  .gitignore  AGENTS.md  BASE_TYPES_MIGRATION.md  CLAUDE.md  Cargo.toml  FILLED_QUANTITY_UPDATE.md  LOB_INTEGRATION_SUMMARY.md  NON_CLEAN_ARCHITECTURE_PITFALLS.md  PROJECT_INTEGRATION.md  README.md  SPOT_ORDER_ATTRIBUTES_ANALYSIS.md  SPOT_TRADE_ENHANCEMENT_SUMMARY.md  TRADE_RECORD_STRATEGY.md  WEBSOCKET_INTEGRATION.md  WHY_LANGUAGE_FEATURES_INSUFFICIENT.md  WHY_NON_CLEAN_ARCHITECTURE_SLOWS_DOWN.md  ZKsync-Introduction.md  clippy.toml  config.json  deny.toml  docker-compose.yml  ref.md  run_automated_benchmark.sh  run_benchmark.sh  rustfmt.toml  test_sbe_api.py  websocket_benchmark_report.md
app/gw_axum/: Cargo.toml
app/gw_axum/src/: main.rs
app/pingora_gateway/: CQRS_PARTITION_ROUTING.md  Cargo.toml  README.md  TUTORIAL.md  test_user_routing.sh
app/pingora_gateway/.claude/: settings.local.json
app/pingora_gateway/src/: main.rs
app/pingora_gateway/src/http/: http_proxy.rs  mod.rs  router.rs  todo.md
app/promptline-rust/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.yaml  package-lock.json  package.json  run_phase3_test.ps1  test_output.txt  test_output_2.txt
app/promptline-rust/docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  INDEX.md  PLUGIN_SYSTEM.md  PROMPT_ENGINEERING.md  ROADMAP.md  SAFETY.md  TESTING.md  TESTING_GUIDE.md  req.md  req2.md
app/promptline-rust/docs/archive/: FINAL_SUMMARY.md  FIXES_APPLIED.md  GEMINI_SETUP.md  PHASE3_CHANGES.md  PHASE3_RESULTS.md  PHASE3_TEST.md  READY_TO_TEST.md  STATUS.md
app/promptline-rust/src/: cli.rs  commands.rs  config.rs  error.rs  formatter.rs  lib.rs  loading.rs  main.rs  permissions.rs  repl.rs
app/promptline-rust/src/agent/: agent_int.rs  mod.rs
app/promptline-rust/src/context/: mod.rs
app/promptline-rust/src/inbound_adapter/: mod.rs  telegram.rs  wechat.md  wechat.rs
app/promptline-rust/src/model/: gemini.rs  kimi.rs  mod.rs  ollama.rs  openai.rs
app/promptline-rust/src/prompt/: mod.rs  templates.rs
app/promptline-rust/src/safety/: mod.rs
app/promptline-rust/src/tools/: file_ops.rs  git_ops.rs  mod.rs  search_ops.rs  shell.rs  trade_ops.rs  web_ops.rs
app/promptline-rust/src/util/: diff.rs  mod.rs
app/promptline-rust/tests/: permission_integration.rs
app/rest_axum/: Cargo.toml  readme.md  task.md
app/rest_axum/src/: main.rs
app/rest_axum/src/md_gw/: mod.rs
app/rest_axum/src/spot_gw/: mod.rs
app/sapp/: API_GUIDE.md  Cargo.toml  README.md  WEBSOCKET.md  test_http.sh  test_rpc.sh  test_ws.sh
app/sapp/examples/: ws_benchmark.rs  ws_client.rs
app/sapp/examples/client/: mod.rs  rest_client.rs  websocket_client.rs
app/sapp/src/: json_rpc_service.rs  main.rs  matching_service.rs  models.rs  rest_service.rs  websocket_service.rs
app/sapp/src/client/: json_rpc_client.rs  mod.rs  restful_client.rs  websocket_client.rs
app/sapp/src/server/: json_rpc_service.rs  mod.rs  restful_service.rs  websocket_service.rs
app/sapp/tests/: spot_trade_behavior_v2_client_test.rs
app/websocket_axum/: Cargo.toml  index.html  readme.md  task.md
app/websocket_axum/benches/: comparison_benchmark.rs  websocket_benchmark.rs
app/websocket_axum/src/: lib.rs  main.rs  main3.rs
app/websocket_sockudo/: Cargo.toml  SOCKUDO_WS_PERFORMANCE_FEATURES.md  task.md  test_performance.py
app/websocket_sockudo/benches/: websocket_benchmark.rs
app/websocket_sockudo/src/: lib.rs  main.rs
app/xdp_aya/: Cargo.toml  build.rs  ref.md
app/xdp_aya/src/: main.rs
app/xdp_libbpf/: AF_XDP_GATEWAY_DOC.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  ref.md
app/xdp_libbpf/src/: main.rs
app/xdp_libbpf/src/bpf/: xdp_hello.bpf.c  xdp_hello.skel.rs
inbound_adapter/websocket_sockudo/: Cargo.toml  index.html
inbound_adapter/websocket_sockudo/src/: lib.rs
lib/common/base_types/: Cargo.toml
lib/common/base_types/src/: ab.md  actor_x.rs  base_types.rs  lib.rs  operator.rs  order_types.rs  perp_types.rs  position_types.rs  spot_topic.rs  trading_types.rs
lib/common/bdd/: Cargo.toml  SKILL.md  readme.md  readme2.md
lib/common/bdd/src/: lib.rs
lib/common/bdd/tests/: bdd_test.rs
lib/common/cache_analyzer_derive/: CACHE_LINE_ALIGNMENT.md  COMPILE_TIME_CHECKS.md  Cargo.toml  FALSE_SHARING.md  IMPLEMENTATION.md  MIGRATION.md  README.md  SINGLE_THREAD.md  thread.md
lib/common/cmd_handler/: Cargo.toml
lib/common/cqrs/: Cargo.toml
lib/common/cqrs/src/: cqrs.rs  (+1 more)
lib/common/db_repo/: Cargo.toml  EVENT_SOURCING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MYSQL_QUERYREPO_IMPLEMENTATION.md  PAGINATION_GUIDE.md  QUICK_REFERENCE.md  db_pool.md
lib/common/decimal/: Cargo.toml
lib/common/diff_derive/: Cargo.toml
lib/common/diff_tracker/: Cargo.toml  PERF_GUIDE.md  clippy.toml
lib/common/inbound_adapter_support/: Cargo.toml
lib/common/lob/: Cargo.toml  README.md  SNAPSHOT_GUIDE.md  SNAPSHOT_IMPLEMENTATION_SUMMARY.md  VEC_LOB_FAQ.md  VEC_LOB_IMPLEMENTATION_GUIDE.md  VEC_LOB_QUICK_REFERENCE.md  VEC_LOB_SNAPSHOT_AND_REPLAY.md  VEC_LOB_VISUALIZATION.md
lib/common/rust_analyzer/: Cargo.toml  README.md  task.md  test.sh  优化.md
lib/common/rust_queue/: Cargo.toml
lib/common/sbe/: Cargo.toml
lib/common/sbe-derive/: Cargo.toml  README.md
lib/common/ws_gateway/: ARCHITECTURE.md  Cargo.toml  readme.md
operating/dex/: Cargo.toml  claude.md
operating/dex/design/: design.md
operating/dex/src/: lib.rs  mempool.rs
operating/dex/tests/: mempool_integration.rs  spot_block_integration.rs
operating/dex/竞品分析/: hyperliquid-block-structure.md
study/hyperliquid_analyzer/: API_ISSUE.md  Cargo.toml  README.md
study/hyperliquid_analyzer/examples/: analyze_block.rs
study/hyperliquid_analyzer/src/: analyzer.rs  client.rs  lib.rs  reporter.rs  types.rs
study/web3/: Cargo.toml  build.rs  run_chat.sh  task.md
study/web3/.claude/: settings.local.json
study/web3/script/: .env.example  .gitignore  INDEX.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  run-reth.sh  test-rpc.sh
study/web3/src/: bin_hash_settlement.rs  lib.rs  main.rs
(+2395 files in other folders)
