cargo-features = ["profile-rustflags"]

[workspace]
members = [
    # lib/common
    "lib/common/algo",
    "lib/common/base_types",
    "lib/common/cache_analyzer_derive",
    "lib/common/cache_analyzer_types",
    "lib/common/cqrs",
    "lib/common/db_repo",
    "lib/common/decimal",
    "lib/common/diff",
    "lib/common/entity_derive",
    "lib/common/fixed_order_cmd",
    "lib/common/fixed_point",
    "lib/common/hotstuff_rs",
    "lib/common/id_generator",
    "lib/common/immutable_derive",
    "lib/common/lob_repo",
    "lib/common/repo_def",
    "lib/common/rust_analyzer",
    "lib/common/rust_queue",
    "lib/common/sbe",
    "lib/common/sbe_derive",
    "lib/common/sequencer",
    "lib/common/single_thread_derive",
    "lib/common/vector_clock",
    
    # lib/core
    "lib/core/exchange/prep",
    
    # app
    "app/axum_server",
    "app/client",
    "app/pingora_gateway",
    "app/websocket_sockudo",
    "app/xdp_libbpf",
    
    # proc
    "proc/operating/cex/exchange/spot",
    "proc/operating/cex/exchange/derivatives",
    "proc/operating/cex/exchange/wallet",
    "proc/operating/cex/exchange/spot_market_data",
    "proc/operating/cex/push/push",
    
    # study
    "study/web3",
    "study/hyperliquid_analyzer", "proc/operating/dex/dex",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hongyao Tang"]
license = "MIT"

[workspace.dependencies]
# 共享依赖可以在这里定义

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
target-cpu = "native"
# 启用 Apple Silicon 的向量扩展
rustflags = [
    "-Cllvm-args=--inline-threshold=500",
    "-Cllvm-args=--unroll-count=8"
]
