[package]
name = "promptline"
version = "0.1.0"
edition = "2021"
authors = ["PromptLine Contributors"]
description = "An Agentic AI-Powered CLI for Intelligent Code Assistance"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.18"
colored = "2.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
similar = "2.3"
dialoguer = "0.11"
regex = "1.10"
dirs = "5.0"
glob = "0.3.1"
rand = "0.8"
rustyline = { version = "13.0", features = ["derive"] }
dotenv = "0.15"
actix = "0.13.5"
actix-rt = "2.11.0"
# 交易相关依赖
base_types = { path = "../../lib/common/base_types" }
spot_behavior = { path = "../../proc/operating/exchange/spot" }
client = { path = "../client" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
wiremock = "0.6"
