[package]
name = "rest_axum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sbe = { path = "../../lib/common/sbe" }
uuid = { version = "1.0", features = ["v4"] }

# Spot 订单处理依赖
spot_proc = { path = "../../proc/operating/exchange/spot", features = ["serde"] }
base_types = { path = "../../lib/common/base_types", features = ["serde"] }
