[package]
name = "rest_axum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hotpath = "0.9"
utoipa = "5"


axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sbe = { path = "../../lib/common/sbe" }
uuid = { version = "1.0", features = ["v4"] }

# Spot 订单处理依赖
spot_behavior = { path = "../../proc/operating/exchange/spot", features = ["serde"] }

derivatives_behavior = { path = "../../proc/operating/exchange/derivatives", features = ["serde"] }

base_types = { path = "../../lib/common/base_types", features = ["serde"] }

# 数据库和仓储依赖
db_repo = { path = "../../lib/common/db_repo" }
lob_repo = { path = "../../lib/common/lob_repo" }
id_generator = { path = "../../lib/common/id_generator" }

# 数据库驱动
mysql = "24.0"
chrono = "0.4.43"
#tower-http = { version = "0.6.8", features = ["fs"] }
tower-http = { version = "0.5", features = ["fs"] }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]