[package]
name = "sapp"
version = "0.1.0"
edition = "2021"

[dependencies]
lob = { path = "../../lib/lob" }
tokio = { version = "1", features = ["full"] }

# JSON-RPC (现有)
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"

# HTTP REST API (新增axum)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
