[package]
name = "sapp"
version = "0.1.0"
edition = "2021"

[dependencies]
lob = { path = "../../lib/core/exchange/lob" }
account = { path = "../../lib/core/account" }
tokio = { version = "1", features = ["full"] }

# JSON-RPC (现有)
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"

# HTTP REST API (新增axum)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = "0.4"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket (高性能)
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
futures-channel = "0.3"

# 并发和同步
dashmap = "5.5"
crossbeam = "0.8"

# 性能监控
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
