[package]
name = "websocket_axum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws", "http2"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
chrono = "0.4"

# Spot behavior dependency
spot_behavior = { path = "../../proc/operating/exchange/spot", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"

[[bench]]
name = "websocket_benchmark"
harness = false


[[bench]]
name = "comparison_benchmark"
harness = false
