[package]
name = "websocket_sockudo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sockudo-ws = { version = "1.7.4", features = ["permessage-deflate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
