[package]
name = "xdp_libbpf"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[dependencies]
libbpf-rs = "0.24.8"
libbpf-sys = "1.2"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
glob = "0.3"
nix = { version = "0.30", features = ["net"] }
tokio = { version = "1", features = ["full"] }  # 保留，因为 xdp_libbpf 直接使用 tokio
websocket_axum = { path = "../websocket_axum" }
simd-json = "0.13"  # 新增：需要直接使用 simd_json 的 json! 宏

[build-dependencies]
