[package]
name = "dex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = "0.8"
base_types = { path = "../../lib/common/base_types" }
cmd_handler = { path = "../../lib/common/cmd_handler" }
rust_decimal = "1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
