[package]
name = "dex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = "0.8"
base_types = { path = "../../lib/common/base_types" }
cmd_handler = { path = "../../lib/common/cmd_handler" }
db_repo = { path = "../../lib/common/db_repo" }
l1_adapter = { path = "../../lib/core/l1_adapter" }
l1_core = { path = "../../lib/core/l1" }
md5 = "0.8"
mdbx = { path = "../../lib/common/mdbx" }
rust_decimal = "1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
