[package]
name = "hyperliquid_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Hongyao Tang"]

[lib]
name = "hyperliquid_analyzer"
path = "src/lib.rs"

[[bin]]
name = "hl_analyzer"
path = "src/bin/hl_analyzer.rs"

[[bin]]
name = "hl_user"
path = "src/bin/hl_user.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI 参数解析
clap = { version = "4", features = ["derive"] }

# 彩色终端输出
colored = "2"

# 时间处理
chrono = "0.4"

# 错误处理
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
