[package]
name = "base_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
entity_derive = { path = "../entity_derive" }
#lob_repo = { path = "../lob_repo" }


diff = { path = "../diff" }
decimal = { path = "../decimal" }
chrono = "0.4.43"
