[package]
name = "bdd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing"] }

[dev-dependencies]
bdd-core = { path = "../bdd_core" }
trybuild = "1.0"
