[package]
name = "cache_analyzer_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
cache_analyzer_types = { path = "../cache_analyzer_types" }

[dev-dependencies]
cache_analyzer_types = { path = "../cache_analyzer_types" }
