[package]
name = "cmd_handler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
minstant = "0.1"
db_repo = { path = "../db_repo" }
diff = { path = "../diff" }
common_entity = { package = "entity", path = "../entity" }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1"
tracing-subscriber = "0.3"
