[package]
name = "cqrs"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]
description = "CQRS (Command Query Responsibility Segregation) framework for Rust"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
serde = ["dep:serde"]
async = ["dep:tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
serde_json = "1.0"
