[package]
name = "db_repo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base_types = { path = "../base_types" }
diff = { path = "../diff" }
entity_derive = { path = "../entity_derive" }
immutable_derive = { path = "../immutable_derive" }
mysql = "24.0"
serde_json = "1.0"
