[package]
name = "db_repo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base_types = { path = "../base_types" }
bytecheck = "0.8"
diff = { path = "../diff" }
entity_derive = { path = "../entity_derive" }
immutable_derive = { path = "../immutable_derive" }
mysql = "24.0"
rancor = "0.1"
rkyv = { version = "0.8", features = ["std"] }
serde_json = "1.0"
thiserror = "2.0.18"
