[package]
name = "db_repo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base_types = { path = "../base_types" }
bytecheck = "0.8"
diff = { path = "../diff" }
entity_derive = { path = "../entity_derive" }
immutable_derive = { path = "../immutable_derive" }
mysql = "24.0"
rancor = "0.1"
rdkafka = { version = "0.36", features = ["cmake-build"] }
rkyv = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "runtime-tokio-native-tls"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt"] }
