[package]
name = "decimal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rust_decimal = "1.41.0"
rust_decimal_macros = "1.40.0"
num-traits = "0.2"
