[package]
name = "inbound_adapter_support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-web = "4"
anyhow = "1"
axum = "0.7"
cmd_handler = { path = "../cmd_handler" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
