[package]
name = "lob_repo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base_types = { path = "../base_types" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
diff = { path = "../diff" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
diff = { path = "../diff" }
entity_derive = { path = "../entity_derive" }
