[package]
name = "rust_analyzer"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
colored = "2.1"
indicatif = "0.17"
rayon = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "rust-opt-analyzer"
path = "src/main.rs"
