[package]
name = "rust_queue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "time"] }
rdkafka = { version = "0.36.2", features = ["cmake-build", "tokio"] }
tracing = "0.1"
push = { path = "../../../proc/operating/push/push" }
diff = { path = "../diff" }
entity_derive = { path = "../entity_derive" }
