[package]
name = "sbe-derive"
version = "0.1.0"
edition = "2021"
authors = ["Hongyao Tang"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
sbe = { path = "../sbe" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
